<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">BookApp</string>
    <string name="new_user_sing_up">Новый пользователь? <b>Зарегистрироваться</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Назад</string>
    <string name="add_a_new_category">Добавить новую категорию</string>
    <string name="category_title">Название категории</string>
    <string name="submit">Отправить</string>
    <string name="profile">Профиль</string>
    <string name="dashboard_admin">Администратор панели управления</string>
    <string name="abc_example_com">abc@example.com</string>
    <string name="log_out">Выйти из системы</string>
    <string name="search">Поиск</string>
    <string name="add_category">+ Добавить категорию</string>
    <string name="add_pdf">Добавить Pdf</string>
    <string name="dashboard_user">DashBoard User</string>
    <string name="tablelayout">TableLayout</string>
    <string name="viewpager">ViewPager</string>
    <string name="forgot_the_password">Забыли пароль?</string>
    <string name="enter_your_registered_email_to_receiver_instruction_to_reset_your_password">Забыли пароль? Введите свой зарегистрированный e-mail, чтобы получить инструкции по восстановлению пароля</string>
    <string name="email">Электронная почта</string>
    <string name="please_login">Пожалуйста, войдите в систему</string>
    <string name="password">Пароль</string>
    <string name="forgot_password7">Забыли пароль?</string>
    <string name="login">Вход в систему</string>
    <string name="welcome_to_book_store">Добро пожаловать</string>
    <string name="continue_without_login">Продолжить без входа в систему</string>
    <string name="upload">Загрузить</string>
    <string name="book_category">Категория книг</string>
    <string name="book_price">Цена книги</string>
    <string name="book_description">Описание книги</string>
    <string name="book_author">Автор книги</string>
    <string name="book_title">Название книги</string>
    <string name="attach_file">Attach file</string>
    <string name="add_a_new_book">Добавить новую книгу</string>
    <string name="add_favorite">Добавить в избранные</string>
    <string name="download">Скачать</string>
    <string name="read">Читать</string>
    <string name="add_comment_btn">Add comment btn</string>
    <string name="comments">Комментарии</string>
    <string name="the_description_of_book">Описание книги</string>
    <string name="n_a">N/A</string>
    <string name="price">Цена</string>
    <string name="pages">Страницы</string>
    <string name="downloads">Загрузки</string>
    <string name="views">Просмотры</string>
    <string name="category">Категория</string>
    <string name="author">Автор</string>
    <string name="title_of_book">Название книги</string>
    <string name="books_details">Подробнее о книги</string>
    <string name="add_cart">Добавить в корзину</string>
    <string name="edit_book_info">Редактировать информацию о книге</string>
    <string name="books">Книги</string>
    <string name="read_book">Читать книгу</string>
    <string name="n_n">N/N</string>
    <string name="full_name">Полное имя</string>
    <string name="account">Аккаунт</string>
    <string name="favorite">Избранное</string>
    <string name="cart">Корзина</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="name">Имя</string>
    <string name="update">Обновить</string>
    <string name="create_new_account">Создать новый аккаунт</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="back_btn">Back btn</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="comment">Комментарий</string>
    <string name="_13">0$</string>
    <string name="total">Итого:</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="person_name">Имя человека</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="the_actual_comment_added_by_user">Фактический комментарий, добавленный пользователем</string>
    <string name="more_btn">More btn</string>
    <string name="book_store">Книжный магазин</string>
</resources>