<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/back02"/>
    
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_white"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <ImageButton
            android:id="@+id/profileEditBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_edit_white"
            android:background="@android:color/transparent"
            android:contentDescription="@string/log_out"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_rect01"
        android:layout_marginTop="180dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:src="@drawable/ic_person_gray"
        app:shapeAppearance="@style/styleRoundedCornersImage"/>

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileIv"
        android:layout_marginTop="8dp"
        android:text="@string/full_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTv"
        android:text="@string/abc_example_com"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="12sp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTv"
        android:layout_marginTop="8dp">

        <com.google.android.material.tabs.TabItem
            android:text="@string/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:text="@string/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabLayout"/>

</RelativeLayout>