<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="126dp">

        <RelativeLayout
            android:id="@+id/pdfRL"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray02">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/titleTV"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pdfRL"
            android:gravity=""
            android:maxLines="1"
            android:text="@string/book_title" />

        <ImageButton
            android:id="@+id/cartBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/more_btn"
            android:src="@drawable/ic_remove_cart_black" />

        <TextView
            android:id="@+id/authorTV"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTV"
            android:layout_toEndOf="@id/pdfRL"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/book_author" />


        <TextView
            android:id="@+id/priceLabelTV"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/pdfRL"
            android:maxLines="1"
            android:text="@string/price" />

        <TextView
            android:id="@+id/priceTV"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/priceLabelTV"
            android:maxLines="1"
            android:text="@string/_13" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>