<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/pdfRL"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray02">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/titleTV"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity=""
            android:text="@string/book_title"
            android:layout_toEndOf="@id/pdfRL"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/authorTV"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:layout_toEndOf="@id/pdfRL"
            android:layout_below="@id/titleTV"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/categoryTV"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/category"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/priceLabelTV"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_toEndOf="@id/pdfRL"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/priceTV"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13"
            android:layout_toEndOf="@id/priceLabelTV"
            android:layout_toStartOf="@id/categoryTV"
            android:layout_marginStart="10dp"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>