<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_rec02"
    android:padding="20dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_back"
            android:contentDescription="@string/back_btn"/>

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:text="@string/add_comment"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentTl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/backBtn"
            android:layout_marginTop="20dp"
            android:hint="@string/comment"
            app:startIconDrawable="@drawable/ic_add_comment_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edit_text"
                android:inputType="textCapSentences|textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/commentTl"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button01"
            android:text="@string/submit"
            android:textColor="@color/white"/>
    </RelativeLayout>


</LinearLayout>