<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.PdfDetailActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/books_details"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bookOptionsLl"
        android:layout_below="@id/toolbarRl"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/pdfRL"
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray02">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/pdfView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/titleTV"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/pdfRL"
                    android:text="@string/title_of_book" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleTV"
                    android:layout_toEndOf="@id/pdfRL">

                    <TableRow android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/authorLabelTV"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/author" />

                        <TextView
                            android:id="@+id/authorTV"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>

                    <TableRow android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/categoryLabelTV"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/categoryTV"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>

                    <TableRow android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/viewsLabelTV"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/views" />

                        <TextView
                            android:id="@+id/viewsTV"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/the_description_of_book"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray02" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/commentsLableTv"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/comments"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <ImageButton
                    android:id="@+id/addCommentBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/add_comment_btn"
                    android:padding="5dp"
                    android:src="@drawable/ic_add_comment_black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentRv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/addCommentBtn"
                    android:background="@color/gray04"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_comment" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bookOptionsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/design_default_color_primary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/readBookBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/design_default_color_primary"
            android:drawableTop="@drawable/ic_book_white"
            android:text="@string/read"
            android:textSize="12sp" />

        <Button
            android:id="@+id/favoriteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/design_default_color_primary"
            android:drawableTop="@drawable/ic_favorite_border_white"
            android:text="@string/add_favorite"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>