<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".activities.DashBoardAdminActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_person_white"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/subTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/titleTV"
            android:text="@string/abc_example_com"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_logout_white"
            android:background="@android:color/transparent"
            android:contentDescription="@string/log_out"/>
        
    </RelativeLayout>

    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/toolbarRl"
        android:hint="@string/search"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_search_gray"
        android:padding="10dp"
        android:background="@color/white"
        android:textColorHint="@color/gray01"
        android:importantForAutofill="no"
        android:inputType="text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLl"
        android:layout_below="@+id/searchET"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_category" />

    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button01"
            android:minHeight="50dp"
            android:text="@string/add_category"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPdfBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_pdf_white"
            android:contentDescription="@string/add_pdf"
            app:tint="@color/white"
            app:fabCustomSize="50dp"
            app:backgroundTint="@color/purple_500"/>

    </LinearLayout>


</RelativeLayout>